--- a/twitter/public/index.html
+++ b/twitter/public/index.html
@@ -4,7 +4,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
